# playwright_mcp

./: .coverage  .cursorrules  .flake8  .gitignore  ADDING_NEW_TOOLS.md  README.md  explore_response.py  google_home_analysis.json  mcp.json  pyproject.toml  pytest-output.txt  requirements.txt  sample_request.json  server_config.json.template  start_services.sh  supervisord.conf  test_points_guy.py
.github/workflows/: test.yml
functional_tests/: cli.py  click_newsletter.py  explore_response.py  highlight_breaking_articles.py  test_ai_agent.py
src/playwright_mcp/: __init__.py  __main__.py  browser_manager.py  server.py  session.py
src/playwright_mcp/browser_daemon/: __main__.py  browser_manager.py  browser_manager.py.bak  daemon.py  session.py
src/playwright_mcp/browser_daemon/core/: logging.py  server.py  session.py
src/playwright_mcp/browser_daemon/handlers/: ai_agent.py  base.py  dom.py  get_result.py  interaction.py  navigation.py  screenshot.py  search_dom.py  session.py
src/playwright_mcp/browser_daemon/handlers/ai_agent/: __init__.py  handler.py  job_store.py  tools.py
src/playwright_mcp/browser_daemon/tools/: __init__.py  base.py  definitions.py  dom_explorer.py  handlers.py  page_analyzer.py
src/playwright_mcp/browser_daemon/tools/handlers/: __init__.py  analyze_page.py  close_browser.py  close_page.py  close_tab.py  execute_js.py  explore_dom.py  find_similar_selectors.py  goto.py  highlight_element.py  interact_dom.py  launch_browser.py  navigate.py  new_page.py  new_tab.py  screenshot.py  search_dom.py  search_dom_js.py  start_daemon.py  stop_daemon.py  utils.py
src/playwright_mcp/browser_daemon/tools/handlers/ai_agent/: get_result.py  handler.py  job_store.py  tools.py
src/playwright_mcp/mcp_server/: __init__.py  core.py  handlers.py  server.py
src/playwright_mcp/mcp_server/handlers/: __init__.py  close_tab.py  execute_js.py  explore_dom.py  highlight_element.py  interact_dom.py  navigate.py  new_tab.py  screenshot.py  start_daemon.py  stop_daemon.py  utils.py
src/playwright_mcp/mcp_server/handlers/ai_agent/: __init__.py  get_result.py  handler.py  job_store.py  tools.py
src/playwright_mcp/mcp_server/tools/: __init__.py
src/playwright_mcp/mcp_server/tools/handlers/: __init__.py  search_dom.py  search_dom_js.py
src/playwright_mcp/tools/: __init__.py  definitions.py  handlers.py
src/playwright_mcp/tools/handlers/: __init__.py  close_browser.py  close_page.py  goto.py  launch_browser.py  new_page.py  utils.py
src/playwright_mcp/utils/: logging.py
test_pkg/: __main__.py
tests/: conftest.py  test_ai_agent_handler.py
tests/integration/: test_ai_agent.py  test_ai_agent_integration.py  test_card_match.py  test_execute_js.py  test_explore_dom.py  test_highlight_element.py  test_mcp_cli_setup.py  test_mcp_server_lifecycle.py  test_navigate.py  test_navigate_analyze.py  test_page_analyze.py  test_screenshot.py  test_server_integration.py
tests/playwright/: test_example.py
tests/unit/: __init__.py  test_ai_agent.py  test_ai_agent_handlers.py  test_ai_agent_tools.py  test_browser_manager.py  test_dom_handler.py  test_interact_dom_handler.py  test_interaction_handler.py  test_mcp_server.py  test_search_dom_js_handler.py  test_server.py  test_session_manager.py  test_utils.py
tests/utils/: mcp_test_client.py  output_validator.py  test_client.py  test_validator.py
