[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-mcp"
version = "0.1.0"
description = "MCP server providing browser automation tools via Playwright"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["mcp", "playwright", "browser", "automation"]
authors = [
    { name = "Adam Holsinger" }
]
dependencies = [
    "mcp>=0.1.0",
    "playwright>=1.39.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
]

[project.entry-points."mcp.servers"]
playwright = "playwright_mcp.server:server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_mcp"]
